# StrategyHub

./: .env.example  .gitignore  AGENTS.md  BUILD.md  BUILD_WEEK_CHANGES.md  CONTEXT.md  DEMO.md  KNOWN_LIMITATIONS.md  PAPER_DEMO_STATUS.md  README.md  SUBMISSION_CHECKLIST.md  USER_GUIDE.md  alembic.ini  build_release.bat  pyproject.toml
.scratch/rangebot-v1/: completion.md  milestone-plan.md  milestones.md  spec.md
acceptance/evidence/: build-context.txt  pytest.txt  uv-sync.txt
demo/: Start-StrategyHub-Paper-Demo.ps1  Stop-StrategyHub-Paper-Demo.ps1  StrategyHub-Paper-Demo.cmd
deploy/: RangeBot.Engine.xml  RangeBot.iss  __init__.py  backup-postgresql.ps1  engine.spec  generate_icon.py  install-service.ps1  restore-postgresql.ps1  stop-engine-for-upgrade.ps1  ui.spec  uninstall-service.ps1
docs/: ADDING_STRATEGY.md  IMPLEMENTATION_CHECKLIST.md  PAPER_TESTNET_VERIFICATION.md  acceptance-evidence.md  beginner-testing-guide.md  final-checklist.md  operations.md  product-requirements.md  product-workflow-audit.md  production-backtesting.md  strategy-workflow.md  ui-spec-ar.md  ui-visual-verification.md
docs/adr/: 0001-isolate-paper-trading-account.md  0002-budget-round-trip-fees-before-sizing.md  0003-require-fresh-action-for-emergency-close.md  0004-never-mutate-unmanaged-exchange-state.md  0005-use-stable-directional-signal-resets.md  0006-gate-live-on-current-verification.md  0007-keep-live-verification-advisory.md  (+1 more)
docs/agents/: domain.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
tests/: __init__.py  conftest.py
(+302 files in other folders)
